--- a/frontend/admin/user.html
+++ b/frontend/admin/user.html
@@ -248,7 +248,7 @@
                                       <div class="form-check form-radio-primary mb-2">
                                         <input type="radio" id="add-new-user-roleRadio0" name="add-new-user-roleRadio"
                                           class="form-check-input form-check-input-add" />
-                                        <label class="form-check-label" for="add-new-user-roleRadio0">Super Admin</label>
+                                        <label class="form-check-label" for="add-new-user-roleRadio0">Superadmin</label>
                                       </div>
                                       <div class="form-check form-radio-success mb-2">
                                         <input type="radio" id="add-new-user-roleRadio1" name="add-new-user-roleRadio"
