--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -125,8 +125,8 @@
                 data-bs-offset="0,22" type="button" aria-haspopup="false" aria-expanded="false">
                 <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/images/users/avatar-1.png"
                   width="24" class="rounded-circle me-lg-2 d-flex" alt="user-image" />
-                <span class="d-lg-flex flex-column gap-1 d-none">
-                  Edric
+                <span class="d-lg-flex flex-column gap-1 d-none js-username">
+                  --
                 </span>
                 <i class="ti ti-chevron-down d-none d-lg-block align-middle ms-2"></i>
               </a>
