--- a/frontend/admin/precious-section.html
+++ b/frontend/admin/precious-section.html
@@ -159,8 +159,8 @@
                     class="rounded-circle me-lg-2 d-flex"
                     alt="user-image"
                   />
-                  <span class="d-lg-flex flex-column gap-1 d-none">
-                    Edric
+                  <span class="d-lg-flex flex-column gap-1 d-none js-username">
+                    --
                   </span>
                   <i
                     class="ti ti-chevron-down d-none d-lg-block align-middle ms-2"
