--- a/frontend/admin/user.html
+++ b/frontend/admin/user.html
@@ -122,8 +122,8 @@
                 data-bs-offset="0,22" type="button" aria-haspopup="false" aria-expanded="false">
                 <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/backend/images/users/avatar-1.png"
                   width="24" class="rounded-circle me-lg-2 d-flex" alt="user-image" />
-                <span class="d-lg-flex flex-column gap-1 d-none">
-                  Edric
+                <span class="d-lg-flex flex-column gap-1 d-none js-username">
+                  --
                 </span>
                 <i class="ti ti-chevron-down d-none d-lg-block align-middle ms-2"></i>
               </a>
@@ -131,6 +131,8 @@
                 <!-- item-->
                 <div class="dropdown-header noti-title">
                   <h6 class="text-overflow m-0">Welcome !</h6>
+                  <h6 class="text-overflow m-0">Session:</h6>
+                  <span class="text-overflow m-0 js-session-remaining">--</span>
                 </div>
 
                 <!-- item-->
