--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -152,7 +152,7 @@
                 <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/contact/c-1-2.png"
                   alt="" />
               </div>
-              <h6>info@infjew.com</h6>
+              <h6>edricding0108@gmail.com</h6>
               <p>Alternative way to get answer faster.</p>
             </div>
           </div>
@@ -168,61 +168,40 @@
           </div>
         </div>
         <div class="contact-form-wrapper">
-            <div class="row">
-              <div class="col-xl-7">
-                <div class="contact-form-inner">
-                  <h6>Drop Us A Line</h6>
-                  <p>
-                    We look forward to hearing from you! Please complete the
-                    form below and one of our representatives will respond to
-                    your query in a timely manner.
-                  </p>
-                  <form action="javascript:;">
-                    <div class="row">
-                      <div class="col-xl-6">
-                        <input
-                          type="text"
-                          placeholder="Full Name"
-                          id="contact-form-name"
-                        />
-                      </div>
-                      <div class="col-xl-6">
-                        <input
-                          type="email"
-                          placeholder="Email"
-                          id="contact-form-email"
-                        />
-                      </div>
-                      <div class="col-12">
-                        <textarea
-                          cols="30"
-                          rows="10"
-                          placeholder="Your Message"
-                          id="contact-form-message"
-                        ></textarea>
-                      </div>
+          <div class="row">
+            <div class="col-xl-7">
+              <div class="contact-form-inner">
+                <h6>Drop Us A Line</h6>
+                <p>
+                  We look forward to hearing from you! Please complete the
+                  form below and one of our representatives will respond to
+                  your query in a timely manner.
+                </p>
+                <form action="javascript:;">
+                  <div class="row">
+                    <div class="col-12">
+                      <input type="text" placeholder="Name" id="contact-form-name" />
                     </div>
-                    <div
-                      class="g-recaptcha"
-                      data-sitekey="6LeB7z0rAAAAAOqg1uhodIzn4en-CsLC80zQvhMi"
-                    ></div>
+                    <div class="col-12">
+                      <input type="email" placeholder="Email" id="contact-form-email" />
+                    </div>
+                    <div class="col-12">
+                      <textarea cols="30" rows="10" placeholder="Your Message" id="contact-form-message"></textarea>
+                    </div>
+                  </div>
 
-                    <a href="#" class="main-btn" id="contact-form-btn"
-                      >Submit</a
-                    >
-                  </form>
-                </div>
+                  <a href="#" class="main-btn" id="contact-form-btn">Submit</a>
+                  
+                </form>
               </div>
-              <div class="col-xl-5">
-                <div class="contact-bg">
-                  <img
-                    src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/contact/c-2.jpg"
-                    alt=""
-                  />
-                </div>
+            </div>
+            <div class="col-xl-5">
+              <div class="contact-bg">
+                <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/contact/c-2.jpg" alt="" />
               </div>
             </div>
           </div>
+        </div>
       </div>
     </div>
   </div>
