--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -339,7 +339,7 @@
       }
 
       function isValidEmail(email) {
-        return /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/.test(email);
+        return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
       }
 
       submitBtn.addEventListener("click", function (e) {
