Add precious types/tags and meta API
Introduce support for precious item types and tags across backend, frontend, and DB.

Backend: add `type` to PreciousItem and a preciousItemPayload struct, centralize JSON responses (writeJSON), add loaders for preciousList/types/tags, validation helpers, and reuse loadPreciousItems in CRUD handlers. Add GetPreciousMetaHandler to serve types/tags for form selects, improve error handling and input normalization, and update routes in main.go (/api/precious/meta).

Frontend: update admin precious-list UI and JS to load and populate type/tag select options, include `type` in add/update payloads, improve form handling, validation, and fetch behavior, and tweak table columns and tooltips. Adjust input mask example and some layout in precious-list.html.

Database/sql: update SQL dump to add `role` column to account, change preciousList tag length and add `type` column, and create new `preciousTags` and `preciousTypes` tables for selectable metadata.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -553,14 +553,14 @@
             </div>
             <div class="blog-content">
               <p class="blog-meta">Stelluna</p>
-              <a href="/article/1">
+              <a href="/article-1">
                 <h5 class="blog-title">
                   What Is Stelluna? A Professional Guide to Stelluna Bodhi
                 </h5>
               </a>
               <div class="blog-details">
-                <a href="/article/1">Read More</a>
-                <a href="/article/2"><i class="las la-arrow-right"></i></a>
+                <a href="/article-1">Read More</a>
+                <a href="/article-2"><i class="las la-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -573,14 +573,14 @@
             </div>
             <div class="blog-content">
               <p class="blog-meta">Stelluna</p>
-              <a href="/article/2">
+              <a href="/article-2">
                 <h5 class="blog-title">
                   Shapes and Forms - All kinds of Stelluna Cuts
                 </h5>
               </a>
               <div class="blog-details">
-                <a href="/article/2">Read More</a>
-                <a href="/article/2"><i class="las la-arrow-right"></i></a>
+                <a href="/article-2">Read More</a>
+                <a href="/article-2"><i class="las la-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -593,15 +593,15 @@
             </div>
             <div class="blog-content">
               <p class="blog-meta">Stelluna</p>
-              <a href="/article/3">
+              <a href="/article-3">
                 <h5 class="blog-title">
                   The Beauty of Time - How Stelluna Evolves with Age & How to
                   Wear
                 </h5>
               </a>
               <div class="blog-details">
-                <a href="/article/3">Read More</a>
-                <a href="/article/3"><i class="las la-arrow-right"></i></a>
+                <a href="/article-3">Read More</a>
+                <a href="/article-3"><i class="las la-arrow-right"></i></a>
               </div>
             </div>
           </div>
