--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -236,8 +236,8 @@
                                     <div class="mb-3">
                                       <label for="add-precious-id" class="form-label">Precious Id</label>
                                       <input type="text" class="form-control" data-toggle="input-mask"
-                                        data-mask-format="INF-00-00000000" id="add-precious-id" />
-                                      <span class="fs-13 text-muted">e.g "INF-01-25051701"</span>
+                                        data-mask-format="INF-000-000" id="add-precious-id" />
+                                      <span class="fs-13 text-muted">e.g "INF-W26-C01"</span>
                                     </div>
                                   </div>
                                   <div class="col-lg-12">
@@ -308,18 +308,16 @@
                                       </select>
                                     </div>
                                   </div>
-                                  <div class="col-lg-12">
+                                  <div class="col-lg-6">
                                     <div class="mb-3">
-                                      <label for="add-precious-tag" class="form-label">Precious Tag</label>
-                                      <select class="form-select my-1 my-md-0 me-sm-3" data-choices
-                                        data-choices-search-false id="add-precious-tag">
-                                        <option value="Stelluna">
-                                          Stelluna
-                                        </option>
-                                        <option value="Adornment">
-                                          Adornment
-                                        </option>
-                                      </select>
+                                      <label for="add-precious-type" class="form-label">Type</label>
+                                      <select class="form-select my-1 my-md-0 me-sm-3" id="add-precious-type"></select>
+                                    </div>
+                                  </div>
+                                  <div class="col-lg-6">
+                                    <div class="mb-3">
+                                      <label for="add-precious-tag" class="form-label">Tag</label>
+                                      <select class="form-select my-1 my-md-0 me-sm-3" id="add-precious-tag"></select>
                                     </div>
                                   </div>
 
@@ -335,7 +333,7 @@
                                       <label for="add-precious-picture-url" class="form-label">Precious Picture
                                         URL</label>
                                       <input type="text" class="form-control" id="add-precious-picture-url"
-                                        placeholder="Enter Precious Picture URL" required="" />
+                                        placeholder="Enter Precious Cover URL" required="" />
                                     </div>
                                   </div>
                                 </div>
@@ -476,17 +474,16 @@
                                       </select>
                                     </div>
                                   </div>
-                                  <div class="col-lg-12">
+                                  <div class="col-lg-6">
                                     <div class="mb-3">
-                                      <label for="edit-precious-tag" class="form-label">Precious Tag</label>
-                                      <select class="form-select my-1 my-md-0 me-sm-3" id="edit-precious-tag">
-                                        <option value="Stelluna">
-                                          Stelluna
-                                        </option>
-                                        <option value="Adornment">
-                                          Adornment
-                                        </option>
-                                      </select>
+                                      <label for="edit-precious-type" class="form-label">Type</label>
+                                      <select class="form-select my-1 my-md-0 me-sm-3" id="edit-precious-type"></select>
+                                    </div>
+                                  </div>
+                                  <div class="col-lg-6">
+                                    <div class="mb-3">
+                                      <label for="edit-precious-tag" class="form-label">Tag</label>
+                                      <select class="form-select my-1 my-md-0 me-sm-3" id="edit-precious-tag"></select>
                                     </div>
                                   </div>
 
@@ -502,7 +499,7 @@
                                       <label for="edit-precious-picture-url" class="form-label">Precious Picture
                                         URL</label>
                                       <input type="text" class="form-control" id="edit-precious-picture-url"
-                                        placeholder="Enter Precious Picture URL" required="" />
+                                        placeholder="Enter Precious Cover URL" required="" />
                                     </div>
                                   </div>
                                 </div>
