--- a/frontend/article-3.html
+++ b/frontend/article-3.html
@@ -288,7 +288,7 @@
           <div class="recent-post-wrap">
             <h5>Recent Post</h5>
             <div class="recent-post-inner">
-              <div class="single-recent-post jump-to-recent" data-jump="https://www.infjew.com/article/1">
+              <div class="single-recent-post jump-to-recent" data-jump="https://www.infjew.com/article-1">
                 <div class="recent-post-thumbnail">
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/articles/a-1-0.jpg"
                     alt="" />
@@ -300,7 +300,7 @@
                   <p>8 hours ago</p>
                 </div>
               </div>
-              <div class="single-recent-post jump-to-recent" data-jump="https://www.infjew.com/article/2">
+              <div class="single-recent-post jump-to-recent" data-jump="https://www.infjew.com/article-2">
                 <div class="recent-post-thumbnail">
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/articles/a-2-0.jpg"
                     alt="" />
@@ -310,7 +310,7 @@
                   <p>8 hours ago</p>
                 </div>
               </div>
-              <div class="single-recent-post jump-to-recent" data-jump="https://www.infjew.com/article/3">
+              <div class="single-recent-post jump-to-recent" data-jump="https://www.infjew.com/article-3">
                 <div class="recent-post-thumbnail">
                   <img src="https://storage.googleapis.com/bucket-infjew/INFJEW/frontend/images/articles/a-3-0.jpg"
                     alt="" />
