Add Store links to admin sidebar
Insert a new "Store" section in the admin sidebar across frontend/admin pages (index.html, precious-list.html, precious-section.html, user.html). Adds links for "Store Page" (store.infjew.com) and "Shopify Dashboard" (admin.shopify.com/store/bk0ft5-jm) with icons and an "S" badge for quick access. Also fixes missing newline at EOF in user.html.

--- a/frontend/admin/precious-section.html
+++ b/frontend/admin/precious-section.html
@@ -116,6 +116,21 @@
               <span class="menu-text"> User </span>
             </a>
           </li>
+
+          <li class="side-nav-title mt-2">Store</li>
+          <li class="side-nav-item">
+            <a href="https://store.infjew.com" class="side-nav-link">
+              <span class="menu-icon"><i class="ti ti-building-store"></i></span>
+              <span class="menu-text"> Store Page </span>
+            </a>
+          </li>
+          <li class="side-nav-item">
+            <a href="https://admin.shopify.com/store/bk0ft5-jm?ui_locales=en" class="side-nav-link">
+              <span class="menu-icon"><i class="ti ti-brand-shopee"></i></span>
+              <span class="menu-text"> Shopify Dashboard </span>
+              <span class="badge bg-infjew rounded-pill">S</span>
+            </a>
+          </li>
         </ul>
 
         <div class="clearfix"></div>
