--- a/frontend/index.html
+++ b/frontend/index.html
@@ -307,7 +307,7 @@
             </div>
           </nav>
           <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="all-products" role="tabpanel" aria-labelledby="all-products-tab"
+            <!-- <div class="tab-pane fade show active" id="all-products" role="tabpanel" aria-labelledby="all-products-tab"
               tabindex="0">
               <div class="row">
                 <div class="col-xl-3 col-lg-4 col-md-6 col-12">
@@ -493,7 +493,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
