Add precious info API and admin UI editor
Introduce PreciousInfo support: backend adds a PreciousInfoItem model, JSON parsing helpers (parseJSONPictures, parseJSONValue), loader loadPreciousInfoByPreciousID and a GET /api/precious/info handler (GetPreciousInfoHandler). Register the new route in main.go and handle nullable fields like precious_official_price and JSON fields for pictures/description.

Frontend updates add a Quill-based rich text editor (preciousInfoQuill), functions to populate the info modal from list rows or API results (fillPreciousInfoModalFromList, fillPreciousInfoModal), fetchPreciousInfoByPreciousID, and a table click handler to load and display precious info. Also adjust form input types for type/tag to text and clean up the old inline Quill initialization.

--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -617,13 +617,13 @@
                                   <div class="col-lg-6">
                                     <div class="mb-3">
                                       <label for="precious-info-type" class="form-label">Type</label>
-                                      <input type="number" class="form-control" id="precious-info-type" readonly />
+                                      <input type="text" class="form-control" id="precious-info-type" readonly />
                                     </div>
                                   </div>
                                   <div class="col-lg-6">
                                     <div class="mb-3">
                                       <label for="precious-info-tag" class="form-label">Tag</label>
-                                      <input type="number" class="form-control" id="precious-info-tag" readonly />
+                                      <input type="text" class="form-control" id="precious-info-tag" readonly />
                                     </div>
                                   </div>
 
@@ -719,28 +719,6 @@
 
 
   <script src="/vendor/quill/quill.min.js"></script>
-  <!-- 
-  var quill = new Quill("#precious-info-desc", {
-    theme: "snow",
-    modules: {
-      toolbar: [
-        [{ font: [] }, { size: [] }],
-        ["bold", "italic", "underline", "strike"],
-        [{ color: [] }, { background: [] }],
-        [{ script: "super" }, { script: "sub" }],
-        [{ header: [!1, 1, 2, 3, 4, 5, 6] }, "blockquote", "code-block"],
-        [
-          { list: "ordered" },
-          { list: "bullet" },
-          { indent: "-1" },
-          { indent: "+1" },
-        ],
-        ["direction", { align: [] }],
-        ["link", "image", "video"],
-        ["clean"],
-      ],
-    }
-  }) -->
 
   <script src="/js/pages/precious-list.js"></script>
 
