--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -628,10 +628,10 @@
                                   </div>
 
 
-                                  <div class="col-lg-12 border-top border-dashed pt-3">
-                                    <div class="mb-3">
+                                  <div class="col-lg-12 border-top border-dashed pt-3 mb-3">
+                                    <div>
                                       <label for="precious-info-picture-url" class="form-label">Precious Picture URL</label>
-                                      <input type="text" class="form-control" id="precious-info-picture-url" />
+                                      <input type="text" class="form-control mb-2" id="precious-info-picture-url" />
                                     </div>
                                   </div>
 
@@ -653,10 +653,10 @@
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-light" data-bs-dismiss="modal"
-                          id="close-save-precious-btn">
+                          id="close-precious-info-btn">
                           Close
                         </button>
-                        <button type="button" class="btn btn-primary" id="save-precious-btn">
+                        <button type="button" class="btn btn-primary" id="save-precious-info-btn">
                           Save
                         </button>
                       </div>
