--- a/frontend/admin/precious-list.html
+++ b/frontend/admin/precious-list.html
@@ -632,6 +632,7 @@
                                     <div>
                                       <label for="precious-info-picture-url" class="form-label">Precious Picture URL</label>
                                       <input type="text" class="form-control mb-2" id="precious-info-picture-url" />
+                                      <input type="text" class="form-control mb-2" id="precious-info-picture-url" /><button type="button" class="btn btn-soft-primary btn-icon"><i class="ti ti-minus fs-20"></i></button>
                                     </div>
                                   </div>
 
